# JIN4_quiz

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt  README.txt~  glad.c  unitTests.cpp
libraries/include/glad/: glad.h
libraries/lib/: glfw3.lib
mainLauncher/: CMakeLists.txt  CMakeLists.txt~
resources/: setup.xml  setup.xml.orig
src/: CMakeLists.txt  Circle.cpp  Circle.h  Circle.h.orig  CutToWinOnClickHandleEvent.cpp  CutToWinOnClickHandleEvent.h  Element.cpp  Element.h  EventHandler.h  EventHandler.h.orig  Game.cpp  Game.cpp.orig  Game.h  ImGuiWindow.cpp  ImGuiWindow.h  ImGuiWindowBuilder.cpp  ImGuiWindowBuilder.h  ImguiElementInputFloat.cpp  ImguiElementInputFloat.h  ImguiElementInputInt.cpp  ImguiElementInputInt.h  ImguiElementTitle.cpp  ImguiElementTitle.h  ImguiHandleEvent.cpp  ImguiHandleEvent.h  Level1EventHandler.cpp  Level1EventHandler.cpp.orig  Level1EventHandler.h  Level1UpdateStrategy.cpp  Level1UpdateStrategy.cpp.orig  Level1UpdateStrategy.h  Level2EventHandler.cpp  Level2EventHandler.h  Level2UpdateStrategy.cpp  Level2UpdateStrategy.h  Level3EventHandler.cpp  Level3EventHandler.h  Level3UpdateStrategy.cpp  Level3UpdateStrategy.h  LevelUpdate.cpp  (+30 more)
unitTests/: CMakeLists.txt
